# cpp-lib-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  Doxyfile  LICENSE  ProjectConfig.h.in  README.md
{{cookiecutter.project_slug}}/scripts/: clean-build.sh
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  demo.cpp
{{cookiecutter.project_slug}}/src/{{cookiecutter.library_name}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/test/: CMakeLists.txt
{{cookiecutter.project_slug}}/test/src/{{cookiecutter.library_name}}/: sample_test.cpp
